--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </ion-header>
     <ion-content>
       <ion-list id="menu-list">
-        <ion-menu-toggle auto-hide="true" *ngFor="let p of appPages; let i = index">
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
             <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
             <ion-label>{{ p.title }}</ion-label>
@@ -31,7 +31,7 @@
         <ion-buttons slot="start">
           <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Larker</ion-title>
+        <ion-title>DARIFY</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-router-outlet id="main-content"></ion-router-outlet>
