--- a/src/app/dare-list/dare-list.component.html
+++ b/src/app/dare-list/dare-list.component.html
@@ -1,3 +1,8 @@
-<p>
-  dare-list works!
-</p>
+<ion-content>
+<ion-list>
+  <ion-item *ngFor="let item of dareList" [routerLink]="['/dare/{{item.key}}']">
+    <ion-icon name="alert-circle-outline" slot="start"></ion-icon>
+    <ion-label>{{item.keyPrompt}}</ion-label>
+  </ion-item>
+</ion-list>
+</ion-content>
