--- a/src/app/dare/dare.component.html
+++ b/src/app/dare/dare.component.html
@@ -1,10 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>{{title}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-<video #videoElement></video>
+<ion-content>
+<ion-grid style="margin-top: 5em;">
+  <ion-row>
+    <ion-col size="12">
+      <ion-button style="width: 100%" size="large" (click)="onButtonClick($event)">
+        {{title}}
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <video class="video-full" style="background-color: black" #videoElement></video>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <ion-button style="width: 100%;" (click)="onButtonClick($event)" size="large">
+        GO!
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  
+</ion-grid>
 
-<ion-button (click)="onButtonClick($event)" size="large">
-  GO!
-</ion-button>
+</ion-content>
