--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let entry of leaderboard | keyvalue">
+        <tr *ngFor="let entry of leaderBoardData | keyvalue">
           <td>{{ entry.key }}</td>
           <td>{{ entry.value }}</td>
         </tr>
