--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,7 @@
     <strong class="capitalize">Dare Time!</strong>
     <p> Click on the LEFT hand menu to get started</p>
   </div>
+  <div id="container">
     <table>
       <thead>
         <tr>
@@ -32,4 +33,5 @@
         </tr>
       </tbody>
     </table>
+  </div>
 </ion-content>
