--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
     <strong class="capitalize">Dare Time!</strong>
     <p> Click on the LEFT hand menu to get started</p>
   </div>
-  <div id="container">
+  <div id="container2">
     <table>
       <thead>
         <tr>
