--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-.container {
+#container {
     text-align: center;
     position: absolute;
     left: 0;
@@ -6,6 +6,16 @@
     top: 50%;
     transform: translateY(-50%);
   }
+
+  #container2 {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
   
   #container strong {
     font-size: 20px;
