--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,30 +8,20 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Large Title</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">Dare Time!</strong>
-    <p> Click on the LEFT hand menu to get started</p>
-  </div>
-  <div id="container2">
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Score</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let entry of leaderBoardData | keyvalue">
-          <td>{{ entry.key }}</td>
-          <td>{{ entry.value }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <ion-grid>
+    <ion-row class="header">
+      <ion-col> <h2>Click on the LEFT hand menu to get started</h2></ion-col>
+    </ion-row>
+    <ion-row class="header">
+      <ion-col><h1>Leaderboard</h1></ion-col>
+    </ion-row>
+    <ion-row class="header">
+      <ion-col>Name</ion-col>
+      <ion-col>Score</ion-col>
+    </ion-row>
+    <ion-row *ngFor="let entry of leaderBoardData | keyvalue: sortByValueDescending">
+      <ion-col>{{ entry.key }}</ion-col>
+      <ion-col>{{ entry.value }}</ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
